2006-03-02  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/features.doc, doc/local/index.doc.in: Cosmetic
	documentation changes.

==============================================================================

2006-03-02  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.10.0-rc1 released (CVS tag: release-3-10-0-rc1)

	* NEWS: Updated to include changes since IT++ 3.9.1 was released.

2006-03-01  Adam Piatyszek  <ediap@users.sourceforge.net>

	* Makefile.am, doc/Makefile.am: Beside `*.gzip' distribution
	packages `*.bzip2' packages will be produced automatically.

	* configure.ac, doc/local/index.doc.in: ITPP_EXTERNAL_VERSION
	variable added in the configure.ac file to set IT++ External
	package version in download links automatically.

	* config/acx_cblas.m4: Fixed a bug in cblas library detection when
	using BLAS and CBLAS from IT++ External package on Cygwin.

	* doc/local/verification.doc: Added tests for SUSE 10.0 (x86_64)
	and SunOS 5.9 (SPARC).

2006-02-28  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/verification.doc: Verification pages redesigned to
	include more information. Added tests statuses for Gentoo Linux
	and Cygwin operating systems.

2006-02-20  Tony Ottosson  <tonyottosson@users.sourceforge.net>
	
	* doc/local/{features.doc, index.doc, sources.mk}:
	Added a list of features of IT++.

2006-02-17  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* doc/tutorial/matlab_itpp.doc, doc/tutorial/tutorial.doc,
	doc/tutorial/sources.mk: Added first draft of how a Matlab/IT++
	conversion table can look like, more to be added
	later. Restructured the tutorial page.
	
2006-02-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac: Fixed a problem with the same ASSERT_LEVEL
	definition in both debug and standard target libraries.

	* TODO: Updated to reflect recent brainstorming among developers.
	
	* doc/local/linking.doc: Minor updates to reflect recent changes.
